# tecnicas-microservicios-upe

./: .gitignore  LICENSE  README.md  docker-compose.yml  dozzle.yml
frontend/: package.json  server.js
frontend/public/: index.html
log-viewer/: Dockerfile  package.json  server.js
log-viewer/public/: index.html
ms1-user-service/: Dockerfile  pom.xml
ms1-user-service/src/main/java/com/upe/userservice/: UserServiceApplication.java
ms1-user-service/src/main/java/com/upe/userservice/config/: RabbitMQConfig.java
ms1-user-service/src/main/java/com/upe/userservice/controller/: UserController.java
ms1-user-service/src/main/java/com/upe/userservice/dto/: CreateUserRequest.java  UserEvent.java
ms1-user-service/src/main/java/com/upe/userservice/messaging/: RabbitMQPublisher.java
ms1-user-service/src/main/java/com/upe/userservice/model/: User.java
ms1-user-service/src/main/java/com/upe/userservice/repository/: UserRepository.java
ms1-user-service/src/main/java/com/upe/userservice/service/: UserService.java
ms1-user-service/src/main/resources/: application.yml
ms2-account-service/: Dockerfile  package.json
ms2-account-service/src/: consumer.js  db.js  index.js
ms3-notification-service/: Dockerfile
ms3-notification-service/src/: consumer.py  main.py
ms4-audit-service/: Dockerfile  go.mod  main.go
ms5-card-service/: CMakeLists.txt  Dockerfile
ms5-card-service/src/: main.c
